[package]
name = "libtriptych"
version = "0.1.0"
edition = "2018"
authors = [
    "Pradipta Bora <pradiptabora@cse.iitb.ac.in>"
]
description = "Triptych Log Sized Ring Signatures Crate for Rust"
readme = "README.md"
repository = "https://github.com/geekpradd/libtriptych-rust"
license = "MIT"


[lib]
# If you only wanted dynamic library, you'd use only "cdylib".
# If you only wanted static library, you'd use only "staticlib".
# This demo shows both. See https://doc.rust-lang.org/reference/linkage.html
# for more information.
crate-type = ["cdylib", "staticlib"]

[dependencies]
curve25519-dalek = {version="3", features=["serde"]}
# curve25519-dalek  = { git = "https://github.com/shachar1236/curve25519-dalek" }
sha2 = "0.9.5"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
libc = "0.2.139"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "signature_bench"
harness = false

[build-dependencies]
cbindgen = "0.24.3"
